# quiver

./: .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/quiver-core/: Cargo.toml
crates/quiver-core/examples/: test_connect.rs
crates/quiver-core/src/: bridge.rs  catalog.rs  client.rs  config.rs  connection.rs  export.rs  lib.rs
crates/quiver-tui/: Cargo.toml
crates/quiver-tui/src/: app.rs  main.rs
crates/quiver-tui/src/ui/: command_palette.rs  help.rs  mod.rs  statusbar.rs  tabs.rs
crates/quiver-tui/src/ui/panes/: context_panel.rs  editor.rs  mod.rs  results.rs  schema_browser.rs
src/: app.rs  event.rs  main.rs
src/config/: mod.rs
src/core/: mod.rs
src/keybindings/: mod.rs
src/theme/: mod.rs
src/ui/: command_palette.rs  help.rs  mod.rs  statusbar.rs
src/ui/panes/: context_panel.rs
