[package]
name = "quiver"
version = "0.1.0"
edition = "2021"
description = "Arrow Flight SQL TUI Client"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
fuzzy-matcher = "0.3"
unicode-width = "0.2"
anyhow = "1"

# Future dependencies (uncomment as features are implemented)
# arrow = { version = "53", features = ["prettyprint"] }
# arrow-flight = { version = "53", features = ["flight-sql-experimental"] }
# datafusion = "43"
# tonic = "0.12"
# tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
