[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
