[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"
dirs = "6"
anyhow = "1.0.102"
arrow = { version = "58", features = ["prettyprint"] }
arrow-flight = { version = "58", features = ["flight-sql"] }
arrow-schema = "58"
tonic = "0.14.5"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3.32"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
