[package]
name = "quiver-core"
description = "Arrow Flight SQL client and connection management for Quiver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
