[package]
name = "quiver-tui"
description = "Arrow Flight SQL TUI Client"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "quiver"

[[bin]]
name = "quiver"
path = "src/main.rs"

[dependencies]
quiver-core = { path = "../quiver-core" }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
fuzzy-matcher = "0.3"
unicode-width = "0.2"
anyhow = { workspace = true }
